[gd_scene load_steps=14 format=2]

[ext_resource path="res://fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/sound_menu.gd" type="Script" id=2]
[ext_resource path="res://sounds/frogblock01.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 36
outline_size = 2
outline_color = Color( 0.501961, 0.501961, 0.501961, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 18
outline_size = 2
outline_color = Color( 0.501961, 0.501961, 0.501961, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
outline_size = 2
outline_color = Color( 0.501961, 0.501961, 0.501961, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
outline_size = 2
outline_color = Color( 0.501961, 0.501961, 0.501961, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 18
outline_size = 2
outline_color = Color( 0.501961, 0.501961, 0.501961, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 18
outline_size = 2
outline_color = Color( 0.501961, 0.501961, 0.501961, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
outline_size = 2
outline_color = Color( 0.501961, 0.501961, 0.501961, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
outline_size = 1
outline_color = Color( 0.501961, 0.501961, 0.501961, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 18
outline_size = 2
outline_color = Color( 0.501961, 0.501961, 0.501961, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 24
outline_size = 2
outline_color = Color( 0.501961, 0.501961, 0.501961, 1 )
font_data = ExtResource( 1 )

[node name="sound_menu" type="Node2D"]
script = ExtResource( 2 )

[node name="bg" type="ColorRect" parent="."]
margin_right = 352.0
margin_bottom = 640.0
color = Color( 0, 0, 0, 0.6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_label" type="Label" parent="."]
margin_left = 88.0
margin_top = 20.0
margin_right = 268.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 1 )
text = "Sound"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fx_label" type="Label" parent="."]
margin_left = 30.0
margin_top = 150.0
margin_right = 78.0
margin_bottom = 174.0
custom_fonts/font = SubResource( 2 )
text = "Fx"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fx_minus" type="Button" parent="fx_label"]
margin_left = 120.0
margin_right = 148.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 4 )
action_mode = 0
text = "-"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fx_plus" type="Button" parent="fx_label"]
margin_left = 270.0
margin_right = 298.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 5 )
action_mode = 0
text = "+"
flat = true

[node name="fx_value" type="Label" parent="fx_label"]
margin_left = 195.0
margin_right = 235.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music_label" type="Label" parent="."]
margin_left = 30.0
margin_top = 250.0
margin_right = 78.0
margin_bottom = 274.0
custom_fonts/font = SubResource( 3 )
text = "Music"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="music_minus" type="Button" parent="music_label"]
margin_left = 120.0
margin_right = 137.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 7 )
action_mode = 0
text = "-"
flat = true

[node name="music_plus" type="Button" parent="music_label"]
margin_left = 270.0
margin_right = 290.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 8 )
action_mode = 0
text = "+"
flat = true

[node name="music_value" type="Label" parent="music_label"]
margin_left = 195.0
margin_right = 235.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 9 )

[node name="back" type="Button" parent="."]
margin_left = 132.0
margin_top = 400.0
margin_right = 240.0
margin_bottom = 430.0
custom_fonts/font = SubResource( 10 )
action_mode = 0
text = "Back"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "fx"
[connection signal="pressed" from="fx_label/fx_minus" to="." method="_on_fx_minus_pressed"]
[connection signal="pressed" from="fx_label/fx_plus" to="." method="_on_fx_plus_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
